--- a/benchmark/def_benchmark.yaml
+++ b/benchmark/def_benchmark.yaml
@@ -3,37 +3,37 @@ targets:
     - name: gmm
       type: distributions.CGaussianMixtureModel
       params: {means: [[1.5], [-4.2]],
-               sigmas: [[0.01], [0.001]],  # WARNING!! Notice the double bracket when defining the cov
+               sigmas: [[0.1], [0.01]],  # WARNING!! Notice the double bracket when defining the cov
                weights:[0.5, 0.5],
                support:[[-10, -10], [10, 10]]}
       space_size: 10.0
       batch_size: 2
-      nsamples: 100
+      nsamples: 1000
       nsamples_eval: 2000
       domain_min: np.array([-10])
       domain_max: np.array([10])
       tags: [high_kurtosis, low_skew, multimodal, separate_modes, disjoint_support]
 
-    - name: gmm
-      type: distributions.CGaussianMixtureModel
-      params: {means: [[0.0, 0.0], [-0.2, 0.4]],
-               sigmas: [[0.01, 0.1], [0.001, 0.01]],  # WARNING!! Notice the double bracket when defining the sigmas
-               weights:[0.5, 0.5],
-               support:[[-1, -1], [1, 1]]}
-      space_size: 1.0
-      batch_size: 2
-      nsamples: 200
-      nsamples_eval: 2000
-      domain_min: np.array([-1,-1])
-      domain_max: np.array([1,1])
-      tags: [high_kurtosis, low_skew, multimodal, close_modes]
+#    - name: gmm
+#      type: distributions.CGaussianMixtureModel
+#      params: {means: [[0.0, 0.0], [-0.2, 0.4]],
+#               sigmas: [[0.01, 0.1], [0.001, 0.01]],  # WARNING!! Notice the double bracket when defining the sigmas
+#               weights:[0.5, 0.5],
+#               support:[[-1, -1], [1, 1]]}
+#      space_size: 1.0
+#      batch_size: 2
+#      nsamples: 200
+#      nsamples_eval: 2000
+#      domain_min: np.array([-1,-1])
+#      domain_max: np.array([1,1])
+#      tags: [high_kurtosis, low_skew, multimodal, close_modes]
 
     - name: normal
       type: distributions.CMultivariateNormal
       params: {mean: [0.0], sigma: [[0.2]], support:[-5, 5]}  # WARNING!! Notice the double bracket when defining the cov
       space_size: 1.0
       batch_size: 2
-      nsamples: 100
+      nsamples: 1000
       nsamples_eval: 2000
       domain_min: np.array([-1])
       domain_max: np.array([1])
