--- a/benchmark/def_methods.yaml
+++ b/benchmark/def_methods.yaml
@@ -13,32 +13,40 @@ methods:
 #        scaling: 1
 #        proposal: "'distributions.CMultivariateUniform({\"center\": np.zeros(self.ndims), \"radius\":(self.space_max-self.space_min) / 2})'"
 #        kde_bw: 0.01
+#
+#    - name: m_pmc
+#      type: sampling_methods.CMixturePMC
+#      params:
+#        K: 20         # Number of samples per proposal distribution
+#        N: 10          # Number of proposal distributions
+#        J: 1000       # Limit number of samples
+#        sigma: 0.01   # Scaling parameter of the spherical gaussian proposal distributions
 
-    - name: m_pmc
-      type: sampling_methods.CMixturePMC
+    - name: hi_daisee
+      type: sampling_methods.CHiDaiseeSampling
       params:
-        K: 20         # Number of samples per proposal distribution
-        N: 10          # Number of proposal distributions
-        J: 1000       # Limit number of samples
-        sigma: 0.01   # Scaling parameter of the spherical gaussian proposal distributions
+        target_ess: 0.9
+        n_min: 10
+        tau: .01
+        debug: 0
 
-    - name: mcmc_mh
-      type: sampling_methods.CMetropolisHastings
-      params:
-        n_burnin: 10
-        n_steps: 2
-        kde_bw: 0.01
-        proposal_sigma: 0.01 # Scaling parameter of the spherical gaussian MC proposal distribution
-
-    - name: lais
-      type: sampling_methods.CLayeredAIS
-      params:
-        K: 3          # Number of samples per proposal distribution
-        N: 5          # Number of proposal distributions
-        J: 1000       # Limit number of samples
-        L: 10         # Number of MCMC moves during the proposal adaptation
-        sigma: 0.01   # Scaling parameter of the spherical gaussian proposal distributions
-        mh_sigma: 0.005  # Scaling parameter of the mcmc proposal distributions moment update
+#    - name: mcmc_mh
+#      type: sampling_methods.CMetropolisHastings
+#      params:
+#        n_burnin: 10
+#        n_steps: 2
+#        kde_bw: 0.01
+#        proposal_sigma: 0.01 # Scaling parameter of the spherical gaussian MC proposal distribution
+#
+#    - name: lais
+#      type: sampling_methods.CLayeredAIS
+#      params:
+#        K: 3          # Number of samples per proposal distribution
+#        N: 5          # Number of proposal distributions
+#        J: 1000       # Limit number of samples
+#        L: 10         # Number of MCMC moves during the proposal adaptation
+#        sigma: 0.01   # Scaling parameter of the spherical gaussian proposal distributions
+#        mh_sigma: 0.005  # Scaling parameter of the mcmc proposal distributions moment update
 
 #    - name: dm_ais
 #      type: sampling_methods.CDeterministicMixtureAIS
